# embedded-radio-protocol-cc1000

./: CMakeLists.txt  CMakePresets.json  README.md
bsp/: ATmega128_bootload.ttl  ATmega128_toolchain.cmake
src/: CMakeLists.txt  bootload.ttl  cc1000.c  cli_cmd_proc.c  main.c
src/conf/cc1000_433100/: cc1000defs.h
src/conf/cc1000_433300/: cc1000defs.h
src/conf/cc1000_433500/: cc1000defs.h
src/conf/cc1000_433700/: cc1000defs.h
src/conf/cc1000_433900/: cc1000defs.h
src/conf/cc1000_434100/: cc1000defs.h
src/conf/cc1000_434300/: cc1000defs.h
src/conf/hal_conf/: hal_config.h
src/include/: cc1000.h  cli_cmd_proc.h
